# Arrnounced

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Issue  README.md  announce_parser.py  announcement.py  announcement_manager.py  announcement_parser.py  arrnounced.py  backend.py  bot.py  config.py  convert_db.py  db.py  example.cfg  example.toml  irc.py  lidarr.py  manager.py  message_handler.py  pyproject.toml  requirements.txt  run_tests.py  settings.cfg.default  tracker_config.py  utils.py  webui.py
.github/workflows/: pythonapp.yml
arrnounced/: announce_parser.py  announcement.py  backend.py  cli.py  config.py  db.py  eventloop_utils.py  irc.py  log.py  manager.py  message_handler.py  session_provider.py  tracker.py  tracker_xml_config.py  utils.py  web_handler.py  webui.py
arrnounced/templates/: index.html  login.html  logs.html  status.html
arrnounced/templates/assets/css/: status.css
src/: announce_parser.py  announcement.py  arrnounced.py  backend.py  config.py  db.py  eventloop_utils.py  irc.py  irc_modes.py  log.py  manager.py  message_handler.py  session_provider.py  tracker.py  tracker_config.py  utils.py  web_handler.py  webui.py
src/templates/: index.html  logs.html
src/templates/assets/css/: index.css
src/templates/assets/js/: index.js
systemd/: announced.service
templates/: index.html  logs.html  settings.html  trackers.html
templates/assets/js/: index.js  settings.js
tests/: test_announce_parser.py  test_announcement.py  test_config.py
tests/configs/: both_lidarr.cfg  both_lidarr.toml  both_radarr.cfg  both_radarr.toml  both_sonarr.cfg  both_sonarr.toml  cannot_notify_lidarr.cfg  cannot_notify_lidarr.toml  cannot_notify_radarr.cfg  cannot_notify_radarr.toml  cannot_notify_sonarr.cfg  cannot_notify_sonarr.toml  default.cfg  default.toml  empty_value.cfg  empty_value.toml  invalid_backend_toml_type.toml  invalid_backend_type.toml  invalid_category_type.toml  invalid_mandatory_type.toml  invalid_optional_type.toml  invalid_settings_type.toml  invalid_toml.toml  missing_backend.cfg  missing_backend.toml  missing_backend_type.toml  missing_channels.cfg  missing_channels.toml  missing_invite_cmd.cfg  missing_invite_cmd.toml  missing_inviter.cfg  missing_inviter.toml  missing_nickname.cfg  missing_nickname.toml  missing_password.cfg  missing_password.toml  missing_port.cfg  missing_port.toml  missing_server.cfg  missing_server.toml  (+7 more)
trackers/: __init__.py  alpharatio.py  btn.py  flro.py  hdtorrents.py  iptorrents.py  morethan.py  nbl.py  red.py  revolutiontt.py  torrentleech.py  xspeeds.py
