[tool.poetry]
name = "arrnounced"
version = "0.7.2"
description = "Notify Sonarr/Radarr/Lidarr of tracker IRC announcements"
authors = ["WeAnnounce <weannounce@protonmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
arrnounced = 'arrnounced.cli:main'

[tool.poetry.dependencies]
python = "~3.9"
aiohttp = "3.8.1"
defusedxml = "0.6.0"
Flask = "1.1.1"
Flask-Login = "0.4.1"
pony = "0.7.14"
tomlkit = "0.7.0"
pydle = "0.9.4"
importlib-metadata = {version = "^1.0", python = "<3.8"}

[tool.poetry.dev-dependencies]
coverage = "5.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
